# gorani-reader-server

./: .drone.yml  .gitignore  .gitmodules  Makefile  README.md  build.sh
api/auth/: auth.go  jwt.go
api/cmd/: main.go
api/model/: base.go  base_test.go  book.go  counter.go  index.go  unkown.go  user.go  word.go  wordbook.go
api/router/: router.go
api/view/: book_test.go  view_test.go  word_test.go  wordbook.go  wordbook_test.go
app/: Cartfile  Cartfile.resolved  Podfile
app.xcworkspace/: contents.xcworkspacedata
app/App/: AppDelegate.swift  Info.plist
app/AppTest/: DictTest.swift  EpubTest.swift  UserDataTest.swift
app/app/: AppDelegate.swift  Helper.swift  Info.plist  Util.swift  ViewController.swift
app/app.xcodeproj/: project.pbxproj
app/copyEpub/: EntryViewController.swift  Info.plist  Main.storyboard  ShareViewController.swift
backend/: .vimrc
backend/src/: CMakeLists.txt  CppRedis.CMakeLists.txt
backend/src/app/: .CMakeLists.txt.swp  CMakeLists.txt
backend/src/app/src/: main.cpp
db/: err.mwb
go/: Dockerfile  Dockerfile.api  Dockerfile.etl
go/api/: main.go
go/etl/: main.go
helloworld/helloworld/: AppDelegate.swift  ViewController.swift
helloworld/helloworld.xcodeproj/: project.pbxproj
helloworld/helloworldTests/: helloworldTests.swift
pkg/: .word_test.go.swp  protocol.md  word_test.go
proto/: etl.proto
public/: package-lock.json  package.json  server.js  tslint.json  webpack.config.js  webpack.dev.config.js
scripts/: env.sh  schema.sql
server/: Gopkg.toml  config.yaml  config_test.yaml  todo.md
train/: train.py
(+428 files in other folders)
